Using p tags in explainer to prevent overflow; body {background: blue}; margins for section title

--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,11 @@
   width:80px;
 }
 
+body {
+  background-color: rgb(128, 173, 214);
+}
+
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
