--- a/src/components/Section/style.css
+++ b/src/components/Section/style.css
@@ -6,10 +6,11 @@
 	text-align: center;
 
 	color: #FFFFFF;
+	margin-bottom: 70px;
+	margin-top: 100px;
 }
 
 .section {
 	padding-top: 20px;
 	padding-bottom: 20px;
-	background-color: rgb(128, 173, 214);
 }
